--- a/fitter_3d/example_cfg.yaml
+++ b/fitter_3d/example_cfg.yaml
@@ -1,12 +1,12 @@
 # An example configuration file for an optimisation
 
 stages:
-  Stage0: # Initialisation stage (see next stage for comments)
+  Stage_0_init: # Initialisation stage (see next stage for comments)
     scheme: 'init'
     nits: 100 # number of iterations for this stage
     lr: 0.05 # Adam optimiser learning rate
 
-  Stage1: # chosen name of stage
+  Stage_1_default: # chosen name of stage
       scheme: 'default' # one of 'init', 'default', 'shape', 'pose', 'deform'. See README for explanation
       nits: 300 # number of iterations for this stage
       lr: 0.03 # Adam optimiser learning rate
@@ -20,7 +20,7 @@ stages:
       custom_lrs: # optional, used to provide different learning rates to certain parameters
         joint_rot: 0.002
 
-  Stage2:
+  Stage_2_deform_coarse:
     scheme: 'deform'
     nits: 1000
     lr: 0.002
@@ -31,9 +31,9 @@ stages:
       w_normal: 0.005
       w_laplacian: 0.01
 
-  Stage3:
+  Stage_3_deform_fine:
     scheme: 'deform'
-    nits: 2000
+    nits: 1000
     lr: 0.0005
 
     loss_weights: # optional, any not provided will revert to default
