Added script to quickly proofread folders of obj files in preparation for SMIL registration

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ LOCAL_TEST/
 custom_processing/antscan_data/
 custom_processing/antscan_processed/
 custom_processing/antscan_stats/
+custom_processing/antscan_proofread/
 
 #pycharm dev
 .idea/
