--- a/fitter_3d/example_cfg.yaml
+++ b/fitter_3d/example_cfg.yaml
@@ -1,16 +1,14 @@
 # An example configuration file for an optimisation
 
 stages:
-  Stage_0_init: # Initialisation stage (see next stage for comments)
-    # init_rot_lock locks the rotation of the body which can be useful if you know the root mesh rotations are correct
-    # default scheme: 'init'
-    scheme: 'init_rot_lock' #default init 
-    nits: 100 # number of iterations for this stage
+  Stage0: # Initialisation stage (see next stage for comments)
+    scheme: 'init'
+    nits: 200 # number of iterations for this stage
     lr: 0.05 # Adam optimiser learning rate
 
-  Stage_1_default: # chosen name of stage
+  Stage1: # chosen name of stage
       scheme: 'default' # one of 'init', 'default', 'shape', 'pose', 'deform'. See README for explanation
-      nits: 300 # number of iterations for this stage
+      nits: 500 # number of iterations for this stage
       lr: 0.03 # Adam optimiser learning rate
 
       loss_weights: # optional, any not provided will revert to default
@@ -20,29 +18,12 @@ stages:
           w_laplacian: 0.01
 
       custom_lrs: # optional, used to provide different learning rates to certain parameters
-        joint_rot: 0.002
+        joint_rot: 0.005
 
-  Stage_2_deform_coarse:
-    scheme: 'deform'
-    nits: 1000
-    lr: 0.002
-
-    loss_weights: # optional, any not provided will revert to default
-      w_chamfer: 1.
-      w_edge: 0.8
-      w_normal: 0.005
-      w_laplacian: 0.01
-
-  Stage_3_deform_fine:
-    scheme: 'deform'
-    nits: 1000
-    lr: 0.0005
-
-    loss_weights: # optional, any not provided will revert to default
-      w_chamfer: 0.5
-      w_edge: 0.2
-      w_normal: 0.002
-      w_laplacian: 0.01
+  Stage2:
+    scheme: 'default'
+    nits: 2000
+    lr: 0.015
 
 # Custom arguments. These will *overwrite* any command line arguments passed into the script
 args:
