Ignoring temporary outputs from sdf computation

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ fit3d_results
 output/
 3D_model_prep/morph_anim/
 3D_model_prep/measurements/
+sdf_batch_output/
 
 # unless specifically added, ignore videos
 *.mp4
