Ignoring temporarily cloned repo for pointnet code

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ sdf_batch_output/
 sample_output/
 plots/
 
+#ignore other repos cloned during dev / debugging
+fitter_3d/pointcloud2smil/
+
 # unless specifically added, ignore videos
 *.mp4
 
